# waybar-check-gmail

./: .gitignore  .pre-commit-config.yaml  .python-version  CONTRIBUTING.md  LICENSE.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: pre-commit.yml  security.yml  tests.yml
src/waybar_check_gmail/: __init__.py  version.py  waybar_check_gmail.py
src/waybar_check_gmail/config/: config.py
src/waybar_check_gmail/util/: __init__.py  util.py  xdg_base_dirs.py
tests/: conftest.py
tests/unit/: test_util_xdg_base_dirs.py  test_version.py
